--- a/templates/marketing_dashboard.html
+++ b/templates/marketing_dashboard.html
@@ -234,7 +234,7 @@
                 <i class="bi bi-calendar-x display-4"></i>
                 <p class="mt-2">Nenhuma visita registrada ainda</p>
                 <a href="{{ url_for('cadastrar_visita_escola') }}" class="btn btn-primary">
-                    <i class="bi bi-plus"></i> Agendar Primeira Visita
+                    <i class="bi bi-plus"></i> Cadastrar Primeira Visita
                 </a>
             </div>
         {% endif %}
