--- a/templates/marketing_dashboard.html
+++ b/templates/marketing_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2><i class="fas fa-bullhorn"></i> Dashboard de Marketing</h2>
+    <h2>Dashboard de Visitas a Escolas</h2>
     <div>
         <a href="{{ url_for('cadastrar_escola') }}" class="btn btn-primary">
             <i class="bi bi-building"></i> Gerenciar Escolas
