--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <i class="bi bi-list fs-5"></i>
         </button>
         <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-            <img src="{{ url_for('static', filename='logo.png') }}" height="30" alt="Logo">
+            <img src="{{ url_for('static', filename='logo_grande.png') }}" height="40" alt="Logo">
         </a>
         <div class="dropdown">
             <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
